--- a/favorite-map-example.html
+++ b/favorite-map-example.html
@@ -41,7 +41,7 @@
 
       // Step 3. Add info window
 
-      var contentString = '<div id="content"><h2 id="firstHeading" class="firstHeading">アメリカ、ニューヨーク州</h2><p>いつかこの街並みを歩いてみたい</p></div>';
+      var contentString = '<div id="content"><h2 id="firstHeading" class="firstHeading">世界最大級の都市”ニューヨーク”</h2><p>ファッション、芸術、経済の発信地であり、夢や刺激を求めて世界中から人々が集まる。私もいつかこの街並みを歩いてみたい。</p></div>';
 
       var infowindow = new google.maps.InfoWindow({
         content: contentString
